ufs: Allow read-only mounting of NetBSD FFSv2 WAPBL filesystems

Skip UFS2 fs_metaspace upper-bound validation that rejects NetBSD FFSv2
WAPBL filesystems due to differing superblock layouts.

Detect the condition during mount instead and permit read-only mounts
while rejecting read-write mounts with EROFS.  This follows NetBSD's
recommendation for systems without WAPBL support and avoids modifying
unsupported journal metadata.

PR:	296022
Signed-off-by: Ricardo Branco <rbranco@suse.de>